app/assets/stylesheets/footer.scss
.footer-empty-div {
  height: 250px;
}

.footer-container-fluid {
  background-color: $footer-dark-grey;
}

.footer-container {
  color: $white;
  padding-top: 30px;
  text-align: center;
  @media (min-width: 576px) {
    max-width: 960px;
  }
}

.footer-column {
  padding-bottom: 15px;
  padding-top: 15px;
}

.footer-logo {
  max-height: 60px;
  max-width: 100%;
  @media (min-width: 768px) {
    max-height: 80px;
  }

  @media (min-width: 992px) {
    max-height: 100px;
  }
}

.footer-social-icon-text {
  margin-left: 15px;
}

.footer-social-icon {
  width: 32px;

  @media (max-width: 576px) {
    width: 24px; // Adjust the size for small screens
  }
  @media (max-width: 360px) {
    width: 16px;
  }
}

.footer-social-icons-row {
  column-gap: 2px;
  margin: inherit;
}

.bounce-out-on-hover {
  box-shadow: 0 0 0 $black;
  display: inline-block;
  padding: 2px;
  transform: perspective(1px) translateZ(0);
  transition-duration: 0.5s;
  vertical-align: middle;
}

.bounce-out-on-hover:hover,
.bounce-out-on-hover:focus,
.bounce-out-on-hover:active {
  transform: scale(0.8);
  transition-timing-function: cubic-bezier(0.47, 2.02, 0.31, -0.36);
  z-index: 1;
}

.footer-links {
  a {
    color: $white;
    text-decoration: none;

    h6 {
      margin-bottom: 10px;
      margin-top: 10px;
    }

    &:hover {
      color: $white;
      text-decoration: underline;
    }
  }
}

.footer-sponsor-logos {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.footer-sponsor-logo-text {
  margin-bottom: 0;
  padding-bottom: 0;
  font-size: 0.8em;
}

.footer-sponsor-logo-div {
  padding-left: 12px;
  padding-right: 12px;
  text-align: center;
}

.footer-sponsor-logo {
  border: solid $footer-dark-grey 1px;
  border-radius: 5px;
  max-width: 150px;
  width: 100%;
  height: auto;
}

.footer-copyright-text {
  padding-top: 15px;

  p {
    font-size: 15px;
  }
}

.bounce-out-on-hover::before,
.bounce-out-on-hover::after {
  --scale: 0;
  left: 55%;
  position: absolute;
  top: 230%;
  transform: translateX(-50%) translateY(-100%) scale(var(--scale));
  transform-origin: center;
  transition: 150ms transform;
}

.bounce-out-on-hover::before {
  background: $tooltip-grey;
  border-radius: 0.3rem;
  color: $white;
  content: attr(data-tooltip);
  padding: 0.5rem;
  text-align: center;
  width: fit-content;
}

.bounce-out-on-hover:hover::before,
.bounce-out-on-hover::after {
  --scale: 1;
}

.bounce-out-on-hover::after {
  content: "";
  width: 10px;
}

.footer-heading-text {
  font-size: 14px;
  font-weight: 600;
  letter-spacing: 1.5px;
  text-transform: uppercase;
  color: $footer-heading-green;
  margin-bottom: 24px;
  @media (min-width: 768px) {
    font-size: 16px;
  }
  @media (min-width: 992px) {
    font-size: 20px;
  }
}

.social-icon-gap {
  margin-right: 2px;
  @media (min-width: 768px) {
    margin-right: 10px;
  }
  @media (min-width: 992px) {
    margin-right: 14px;
  }
}

.max-w-200 {
  max-width: 200px !important;
}

.footer-links-column {
  margin-bottom: 14px;
  @media (min-width: 576px) {
    margin-bottom: 0;
  }
}

.footer-logo-wrapper {
  margin-left: -10px;
}

